dev: added scss and favicon

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <base href="/" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tableau périodique des éléments chimiques</title>
+    <link rel="shortcut icon" href="assets/logo.svg" type="image/svg" />
   </head>
   <body>
     <h1>Tableau périodique des éléments chimiques</h1>
     <div class="tableau">Ici on va mettre le tableau périodique.</div>
+    <div class="legal">
+      Icons made by
+      <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
+      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </div>
   </body>
 </html>
